--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
+    implementation group: 'org.json', name: 'json', version: '20190722'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.31.1'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
