--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
+    implementation group: 'org.jetbrains', name: 'annotations', version: '16.0.2'
     implementation group: 'org.json', name: 'json', version: '20190722'
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.31.1'
 
