--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
-spring.resources.static-locations=classpath:/public/images,file:./uploads
+spring.resources.static-locations=classpath:/public/,file:./uploads/
 # max file size
 spring.servlet.multipart.max-file-size=10MB
 # max request size
 spring.servlet.multipart.max-request-size=10MB
 # files storage location (stores all files uploaded via REST API)
-storage.location=./uploads
+storage.location=./uploads/images/
